--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -3,7 +3,7 @@
   float: left;
   margin: 0 0 3em 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
   background-color: #f2f2f2;
   border-bottom: 1px solid #ccc;
   border-top: 1px solid #ccc;
@@ -14,8 +14,6 @@
   float: left;
   display: block;
   padding: 8px 15px;
-  text-decoration: none;
   font-weight: bold;
-  color: #069;
-  border-right: 1px solid #ccc;
+  border-right: 2px solid #ccc;
 }
