--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,8 +1,14 @@
+.about_text {
+  margin: 20px;
+  text-align: left;
+  font-size: 16px;
+}
 .values {
   list-style-type: none;
   display: flex;
   justify-content: space-evenly;
   font-weight: bold;
+  width: 95%;
 }
 .values li {
   border: 2px white solid;
@@ -15,33 +21,90 @@
 #create {
   background-color: rgb(50, 89, 131);
 }
-#create:hover {
-  font-size: 20px;
-}
 #money {
   background-color: rgb(0, 128, 0);
-}
-#money:hover {
-  font-size: 20px;
 }
 #logic {
   background-color: rgb(255, 165, 0);
 }
-#logic:hover {
-  font-size: 20px;
-}
 #family {
   background-color: rgb(128, 0, 128);
-}
-#family:hover {
-  font-size: 20px;
 }
 #merit {
   background-color: rgb(255, 0, 0);
 }
+
+#create,
+#money,
+#logic,
+#family,
+#merit {
+  border-radius: 6px;
+}
+
+#create:hover,
+#money:hover,
+#logic:hover,
+#family:hover,
 #merit:hover {
   font-size: 20px;
+  border-radius: 10px;
 }
-.PopThink {
-  width: 70%;
+
+@media (min-width: 750px) {
+  .about_text {
+    font-size: 18px;
+  }
+  #create,
+  #money,
+  #logic,
+  #family,
+  #merit {
+    font-size: 18px;
+  }
+  #create:hover,
+  #money:hover,
+  #logic:hover,
+  #family:hover,
+  #merit:hover {
+    font-size: 22px;
+  }
+}
+@media (min-width: 950px) {
+  .about_text {
+    font-size: 20px;
+  }
+  #create,
+  #money,
+  #logic,
+  #family,
+  #merit {
+    font-size: 20px;
+  }
+  #create:hover,
+  #money:hover,
+  #logic:hover,
+  #family:hover,
+  #merit:hover {
+    font-size: 24px;
+  }
+}
+@media (min-width: 1200px) {
+  .about_text {
+    font-size: 22px;
+  }
+  #create,
+  #money,
+  #logic,
+  #family,
+  #merit {
+    font-size: 22px;
+  }
+  #create:hover,
+  #money:hover,
+  #logic:hover,
+  #family:hover,
+  #merit:hover {
+    font-size: 28px;
+  }
 }
