--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,9 +1,33 @@
 h1 {
   margin-top: 38px;
+  font-size: 40px;
 }
 h2 {
   font-size: 16px;
 }
 .main_body {
-  margin: 15px;
+  margin: 20px;
+}
+
+@media (min-width: 750px) {
+  h1 {
+    margin-top: 44px;
+    font-size: 46px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+}
+@media (min-width: 950px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 26px;
+  }
+}
+@media (min-width: 1200px) {
+  h2 {
+    font-size: 36px;
+  }
 }
