--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,5 @@
 #mktNav {
   width: 100%;
-  float: left;
   margin: 0 0 3em 0;
   padding: 0;
   list-style-type: none;
@@ -15,5 +14,25 @@
   display: block;
   padding: 8px 15px;
   font-weight: bold;
+  font-size: 16px;
   border-right: 2px solid #ccc;
+}
+
+@media (min-width: 750px) {
+  #mktNav {
+    /* width: 80%; */
+  }
+  #mktNav li {
+    font-size: 20px;
+  }
+}
+@media (min-width: 950px) {
+  #mktNav li {
+    font-size: 24px;
+  }
+}
+@media (min-width: 1200px) {
+  #mktNav li {
+    font-size: 30px;
+  }
 }
