--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -2,7 +2,6 @@
   width: 100%;
   margin: 0 0 3em 0;
   padding: 0;
-  list-style-type: none;
   background-color: #f2f2f2;
   border-bottom: 1px solid #ccc;
   border-top: 1px solid #ccc;
@@ -17,18 +16,19 @@
   font-size: 16px;
   border-right: 2px solid #ccc;
 }
+#mktNav li a {
+  text-decoration: none;
+  color: #000059;
+}
 
 @media (min-width: 750px) {
-  #mktNav {
-    /* width: 80%; */
-  }
   #mktNav li {
     font-size: 20px;
   }
 }
 @media (min-width: 950px) {
   #mktNav li {
-    font-size: 24px;
+    font-size: 25px;
   }
 }
 @media (min-width: 1200px) {
